--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,15 +1,72 @@
-name: my-snap-name # you probably want to 'snapcraft register <name>'
-version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-summary: Single-line elevator pitch for your amazing snap # 79 char long summary
+name: resourcehacker
+version: 4.5.30
+summary: resourcehacker is a free resource extraction utility and resource compiler.
 description: |
-  This is my-snap's description. You have a paragraph or two to tell the
-  most important story about your snap. Keep it under 100 words though,
-  we live in tweetspace and your description wants to look good in the snap
-  store.
+ resourcehacker has been designed to be the complete resource editing tool & compiling, viewing, decompiling and recompiling resources for both 32bit and 64bit Windows executables. resourcehacker can open any type of Windows executable (*.exe; *.dll; *.scr; *.mui etc) so that individual resources can be added modified or deleted within these files. resourcehacker can create and compile resource script files (*.rc), and edit resource files (*.res) too.
 
-confinement: devmode # use 'strict' once you have the right plugs and slots
+confinement: strict
+grade: stable
+architectures: [amd64, i386]
+
+apps:
+  resourcehacker:
+    command: resourcehacker
+    desktop: usr/share/applications/resourcehacker.desktop
+    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, hardware-observe, process-control, cups-control ]
 
 parts:
-  my-part:
-    # See 'snapcraft plugins'
+  enable-i386:
     plugin: nil
+    prepare: |
+      dpkg --add-architecture i386
+      apt update
+      apt upgrade -yy
+
+  wine-3p1:
+    after: [enable-i386]
+    plugin: dump
+    source: https://dl.winehq.org/wine-builds/ubuntu/pool/main/wine-stable-i386_3.0.0~xenial_i386.deb
+    source-type: deb
+    install: |
+      spi=$SNAPCRAFT_PART_INSTALL
+      lins=$spi/usr/share/lintian
+      docs=$spi/usr/share/doc
+      mans=$spi/usr/share/man
+      ws=opt/wine-stable
+      cp -r $ws/* $spi/ && cp -r $spi/share $spi/usr/ && rm -r $spi/opt $spi/share $mans $lins $docs
+    stage-packages:
+    - on i386:
+      - libfreetype6
+      - libpng12-0
+      - libncurses5
+      - libgnutls30
+      - libxext6
+      - libudev1
+      - libc6
+      - zlib1g
+    - on amd64:
+      - libfreetype6:i386
+      - libpng12-0:i386
+      - libncurses5:i386
+      - libgnutls30:i386
+      - libxext6:i386
+      - libudev1:i386
+      - libc6:i386
+      - zlib1g:i386
+
+  wine-3p2:
+    plugin: dump
+    source: https://dl.winehq.org/wine-builds/ubuntu/pool/main/wine-stable_3.0.0~xenial_i386.deb
+    source-type: deb
+    install: |
+      spi=$SNAPCRAFT_PART_INSTALL
+      docs=$spi/usr/share/doc
+      mans=$spi/share/man
+      ws="opt/wine-stable"
+      cp -r $ws/* $spi/ && rm -r $spi/opt $docs $mans $spi/share/wine/fonts
+
+  resourcehacker:
+    plugin: dump
+    source: ./scripts
+    prepare: ./dl_rh
+    build-packages: [wget, p7zip-full]
