--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,7 +12,7 @@ apps:
   resourcehacker:
     command: resourcehacker
     desktop: usr/share/applications/resourcehacker.desktop
-    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, hardware-observe, process-control, cups-control ]
+    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, hardware-observe, process-control, cups-control, removable-media ]
 
 parts:
   enable-i386:
