--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,56 +11,20 @@ architectures:
   - build-on: amd64
     run-on: [amd64, i386]
 
+plugs:
+  wine-platform-plug:
+    content: wine-base-devel
+    interface: content
+    target: $SNAP/wine-platform
+    default-provider: wine-platform-i386
+
 apps:
   resourcehacker:
     command: resourcehacker
     desktop: usr/share/applications/resourcehacker.desktop
-    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, hardware-observe, process-control, cups-control, removable-media ]
+    plugs: [ wayland, x11, opengl, home, desktop, desktop-legacy, hardware-observe, process-control, cups-control, removable-media, wine-platform-plug ]
 
 parts:
-  enable-i386:
-    plugin: nil
-    override-build: |
-      snapcraftctl build
-      dpkg --add-architecture i386
-      apt update
-
-  wine-3p1:
-    after: [enable-i386]
-    plugin: dump
-    source: https://dl.winehq.org/wine-builds/ubuntu/pool/main/wine-stable-i386_3.0.2~xenial_i386.deb
-    source-type: deb
-    override-build: |
-      snapcraftctl build
-      spi=$SNAPCRAFT_PART_INSTALL
-      lins=$spi/usr/share/lintian
-      docs=$spi/usr/share/doc
-      mans=$spi/usr/share/man
-      ws=opt/wine-stable
-      cp -r $ws/* $spi/ && cp -r $spi/share $spi/usr/ && rm -r $spi/opt $spi/share $mans $lins $docs
-    stage-packages:
-      - libfreetype6:i386
-      - libpng12-0:i386
-      - libncurses5:i386
-      - libgnutls30:i386
-      - libxext6:i386
-      - libudev1:i386
-      - libc6:i386
-      - libxrender1:i386
-      - zlib1g:i386
-
-  wine-3p2:
-    plugin: dump
-    source: https://dl.winehq.org/wine-builds/ubuntu/pool/main/wine-stable_3.0.2~xenial_i386.deb
-    source-type: deb
-    override-build: |
-      snapcraftctl build
-      spi=$SNAPCRAFT_PART_INSTALL
-      docs=$spi/usr/share/doc
-      mans=$spi/share/man
-      ws="opt/wine-stable"
-      cp -r $ws/* $spi/ && rm -r $spi/opt $docs $mans $spi/share/wine/fonts
-
   resourcehacker:
     plugin: nil
     source: ./scripts
@@ -73,5 +37,5 @@ parts:
     stage:
       - bin
       - usr
-      - share
+      - wine-platform
     build-packages: [wget, p7zip-full]
